feat: add map to dashboard

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
     </style>
   </head>
   <body>
- 
-
-
-
     <div class="chart-container">
+
+    <div style="min-height:695px" id="datawrapper-vis-9oGDF"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/9oGDF/embed.js" charset="utf-8" data-target="#datawrapper-vis-9oGDF"></script><noscript><img src="https://datawrapper.dwcdn.net/9oGDF/full.png" alt="ADA-Approved Subway Stations (Symbol map)" /></noscript></div>
+
+  
     <div style="min-height:541px; background: white ;" id="datawrapper-vis-SmHQc"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/SmHQc/embed.js" charset="utf-8" data-target="#datawrapper-vis-SmHQc"></script><noscript><img src="https://datawrapper.dwcdn.net/SmHQc/full.png" alt="Is Brooklyn the MTA's Most Reliably ADA-Friendly Borough? (Scatter Plot)" /></noscript></div>
+  
+
     <h1>MTA ADA Station Availability by Borough - Last 6 Months</h1>
     </div>
     <div class="chart-container">
