feat: remove scatterplot. keep this repo just to automated charts

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     }
 
     iframe {
+      margin: 10px;
       display: block;
       width: 100%;
       border: none;
@@ -57,20 +58,7 @@
 
 
 
-.layout {
-  align-items: stretch;
-}
 
-.small-multiples {
-  flex: 0 0 30%;     
-  max-height: calc(100vh - 120px); 
-  overflow-y: auto;             
-}
-
-.top-chart {
-  flex: 0 0 70%;
-  max-height: calc(100vh - 120px);
-}
   </style>
 </head>
 
@@ -81,13 +69,14 @@
   <div class="layout">
 
     <div class="top-chart">
-      <div id="datawrapper-vis-9oGDF" style="min-height:695px;">
+      <div id="datawrapper-vis-9oGDF" >
         <script defer src="https://datawrapper.dwcdn.net/9oGDF/embed.js"
                 charset="utf-8"
                 data-target="#datawrapper-vis-9oGDF"></script>
         <noscript>
-          <img src="https://datawrapper.dwcdn.net/9oGDF/full.png"
-               alt="ADA‑Approved Subway Stations (Symbol map)">
+          <img  src="https://datawrapper.dwcdn.net/9oGDF/full.png"
+               alt="ADA‑Approved Subway Stations (Symbol map)"
+            >
         </noscript>
       </div>
     </div>
