feat: draft, moving main piece into portfolio

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           ways for us to get around if they were to visit me in NYC. I started
           looking into the MTA's accessible stations, and found that while
           Manhattan has the most ADA-approved stations in sheer volume,
-          Brooklyn's ADA stations are most often to be in full working
-          condition.
+          Brooklyn's ADA stations are arguably the most reliable, at least in
+          recent years.
         </p>
         <div id="hero-chart" class="top-chart">
           <iframe
